msgpack extension changelog

Version 0.3.4
-------------
	* Support PHP 5.3.x version on Windows.
	(note: NAN and Resource is failed)

Version 0.3.3
-------------
	* Update msgpack header files.
	* Fix unpack internal processing.

Version 0.3.2
-------------
	* Version PHP 5 or newer.

Version 0.3.1
-------------
	* Fix class MessagePackUnpacker.

Version 0.3.0
-------------
	* Change msgpack_unpack.c (used template)
	* Add php_only ini option (true / false)
	* Change class MessagePack and MessagePackUnpacker __construct option.
	* Add class MessagePack and MessagePackUnpacker setOption method.

Version 0.2.1
-------------
	* Fix stream deserializer.

Version 0.2.0
-------------
	* Add stream deserializer / class MessagePackUnpacker interface.
	* Add alias functions.
	* Add class MessagePack interface.

Version 0.1.5
-------------
	* Add msgpack_pack.c
	* Add msgpack_unpack.c
	* Update msgpack.c

Version 0.1.4
-------------
	* Change broken random data.
	* Support PHP 5.2.x version.

Version 0.1.3
-------------
	* Fix broken random data.
	* Change arrays and objects.

Version 0.1.2
-------------
	* Add Serializable class support.
	* Fix arrays and objects reference.

Version 0.1.1
-------------
	* Add session support.

Version 0.1.0
-------------
	* Initial release.