@@ -28,7 +28,7 @@ array(0) {
 }
 OK
 array(1, 2, 3)
-83000101020203
+93010203
 array(3) {
   [0]=>
   int(1)
@@ -39,7 +39,7 @@ array(3) {
 }
 OK
 array(array(1, 2, 3), arr...
-83008300010102020301830004010502060283000701080209
+93930102039304050693070809
 array(3) {
   [0]=>
   array(3) {
